# cpp20

./: .gitignore  CMakeLists.txt  vs2019_x64_generate.bat
coro/: CMakeLists.txt
coro/src/: main.cpp
coroutines/: CMakeLists.txt
coroutines/include/: thread_pool.h
coroutines/src/: main.cpp
cppconcepts/: CMakeLists.txt
patterns/: CMakeLists.txt
patterns/src/: main.cpp
standardlib/: CMakeLists.txt
standardlib/include/: integer_sequence.h  is_any_of.h  tuple.h  type_at_index.h  type_in_pack.h
standardlib/src/: main.cpp
